Updated more things

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 					<header class="special container">
 						<span class="icon solid fa-envelope"></span>
 						<h2>Get In Touch</h2>
-						<p>Feel free to contact me! My e-mail is roberts.1611@osu.edu, and if you're at OSU you can always stop by my office in the Physics Research Building M2007. </p>
+						<p>Feel free to contact me! My e-mail is roberts[dot]1611[at]osu[dot]edu, and if you're at OSU you can always stop by my office in the Physics Research Building M2007. </p>
 					</header>
 
 
