--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 					<header class="special container">
 						<!-- <span class="icon solid fa-chart-bar"></span> -->
 						<span class="icon solid fa-anchor"></span>
-						<h2>Hi! I'm currently a physics PhD candidate at <strong>The Ohio Sate University</strong> studying the smallest galaxies
+						<h2>I study the dwarf satellite galaxy population of low-mass host galaxies, with stellar masses lower than the Milky Way,
+								in order to gain further insight on hierarchical structure formation, the environmental effects on satellites, and the nature of dark matter.
 						</h2>
 
 					</header>
@@ -109,17 +110,17 @@
 									<p>
 									<strong>Fun facts about me </strong>
 									<br />
-									My favorite place in the world is Key West, FL and the Florida Keys. Hawaii is a very close second though
+									* My favorite place in the world is Key West, FL and the Florida Keys. Hawaii is a very close second though
 									<br />
-									I'm a proud guinea pig mom to Deacon and Comet
+									* I'm a proud guinea pig mom to Pip and Cosmo, and dog mom to Kai.
 									<br />
-									I love to ice skate in my free time
+									* I like to consider myself an amateur dog trainer. I love to read up on how dogs think and learn.
 									<br />
-									I really enjoy playing on aerial silks
+									* I love to ice skate in my free time
 									<br />
-									I'm a volunteer for 4 paws for ability, an organization which helps train dogs for children with disabilities
+									* I really enjoy playing on aerial silks
 									<br />
-									I love playing the ukulele, violin, and learning new instruments. I hope to pick up the banjo at some point
+									* I love playing the ukulele, violin, and learning new instruments. I hope to pick up the banjo at some point
 									</p>
 
 
