--- a/research.html
+++ b/research.html
@@ -51,8 +51,7 @@
 						<span class="icon solid fa-laptop"></span>
 						<h2><strong>Research</strong></h2>
 						<p> <strong>
-							I study satellite galaxies of hosts with low stellar mass, between the Large Magellanic Cloud and the Milky Way.
-								These galaxies allow us to further understand hierarchical structure formation, where small structures merged together to form the large objects we see today, and also understand what the universe is made of.
+							Bellow are brief summaries of the projects I have worked on through out my time as a graduate student.
 							</strong></p>
 					</header>
 
@@ -60,48 +59,107 @@
 						<section class="wrapper style4 container">
 
 							<div class="row gtr-150">
-								<div class="col-8 col-12-narrower">
+								<div class="col-5 col-5-narrower">
 
 									<!-- Content: Just the image -->
 										<div class="content">
 											<section>
-												<a href="#" class="image featured"><img src="images/host_satellites.jpg" alt="" /></a>
-												<!-- <header>
-													<h3>hi</h3>
-												</header> -->
+												<header>
+													<h3>Satellite Luminosity Function of Low-Mass Host Galaxies in the COSMOS survey</h3>
+												</header>
 											</section>
+												<a href="#" class="image featured"><img src="images/host_satellites.jpg" alt="" /></a>
+
 										</div>
 
 								</div>
-								<div class="col-4 col-12-narrower">
+								<div class="col-6 col-1-narrower">
 
 									<!-- Sidebar -->
 
 										<div class="sidebar">
 											<section>
 												<header>
-													<h3> Satellite Luminosity Function of Low-Mass Host Galaxies </h3>
+													<h3>  </h3>
 												</header>
-												<p>	Recently, I used the COSMOS survey to study satellite galaxy populations of hosts with stellar mass 9.5 < log(M_*/M_⊙) < 10.5 at redshifts 0.1 < z < 0.8. Using a bayesian statistical analysis, we were able to measure the hosts satellite luminosity function (number of satellites per host as a function of magnitude) by detecting a satellite overdensity signal above that of the background/foreground objects.
+												<p>
+													I performed the first study of satellite systems of host galaxies with stellar masses between 9.5 < log(M∗/M⊙) < 10.5 across half the age of the universe,
+													and statistically found satellites with stellar masses equivalent to the Fornax dwarf spheroidal satellite of the Milky Way.
+													I also observe that the satellite populations for these hosts remain mostly unchanged through time, and a weak dependence between host stellar mass
+													and satellite abundance per host. Additionally, I was able to demonstrate how my measured cumulative satellite luminosity function is able to constrain the low-mass end of the ΛCDM
+													predicted stellar mass-halo mass relation (M∗–Mhalo).
 												</p>
-												<!-- <footer>
+
+												<footer>
 													<ul class="buttons">
-														<li><a href="#" class="button small">Learn More</a></li>
+														<li><a href="https://arxiv.org/abs/2008.05479" class="button small">See COSMOS ArXiv Paper</a></li>
 													</ul>
-												</footer> -->
+												</footer>
 											</section>
 										</div>
 							</div>
 						</div>
 
-						<!-- Content -->
-							<div class="content">
-								<section>
-									<p>
-									This is the first study of low-mass host satellite systems across cosmic time! And is important because it allows us to test hierarchical galaxy formation in  ΛCDM, the current cosmology that supports our models of galaxy formation.
-									</p>
-								</section>
+
+
+						<!-- DES Paper -->
+
+						<section class="wrapper style4 container">
+
+							<div class="row gtr-150">
+								<div class="col-6 col-5-narrower">
+
+									<!-- Content: Just the image -->
+										<div class="content">
+											<section>
+												<header>
+													<h3>Identifying Faint Satellite Galaxies of Low-Mass hosts in the Local Volume</h3>
+												</header>
+											</section>
+												<a href="#" class="image featured"><img src="images/Footprint_IMAGINE.pdf" alt="" /></a>
+
+										</div>
+
+								</div>
+								<div class="col-6 col-1-narrower">
+
+									<!-- Sidebar -->
+
+										<div class="sidebar">
+											<section>
+												<header>
+													<h3>  </h3>
+												</header>
+												<p>
+													With this project I studied low-surface- brightness galaxies in the Local Volume using the DES Year 3 LSBG catalog.
+													I specifically targeted low-mass host galaxies (e.g. Large Magellanic Cloud to Milky Way-mass) in the IMAGINE radio survey, a program that mapped out the HI environment in and around 28 nearby spiral galaxies in the Southern Hemisphere.
+													Using visual and statistical techniques, I proposed a list of high-quality satellite candidates around these hosts,
+													making these ideal candidates for follow-up studies. I also provided upper limits on the HI gas richness of these high-quality satellite candidates,
+													along with a handful of potential globular cluster candidates after performing an optical search.
+												</p>
+
+												<footer>
+													<ul class="buttons">
+														<li><a href="#" class="button small">DES paper in review process</a></li>
+													</ul>
+												</footer>
+											</section>
+										</div>
 							</div>
+						</div>
+
+
+
+
+						<!-- Content -->
+							<!-- <div class="content">
+								<section>
+									<p> -->
+									<!-- This is the first study of low-mass host satellite systems across cosmic time! And is important because it allows us to test hierarchical galaxy formation in  ΛCDM, the current cosmology that supports our models of galaxy formation. -->
+
+									<!-- </p>
+								</section>
+							</div> -->
 
 
 					</section>
