--- a/research.html
+++ b/research.html
@@ -85,7 +85,7 @@
 												<p>
 													I performed the first study of satellite systems of host galaxies with stellar masses between 9.5 < log(M∗/M⊙) < 10.5 across half the age of the universe,
 													and statistically found satellites with stellar masses equivalent to the Fornax dwarf spheroidal satellite of the Milky Way.
-													I also observe that the satellite populations for these hosts remain mostly unchanged through time, and a weak dependence between host stellar mass
+													I also observed that the satellite populations for these hosts remain mostly unchanged through time, and a weak dependence between host stellar mass
 													and satellite abundance per host. Additionally, I was able to demonstrate how my measured cumulative satellite luminosity function is able to constrain the low-mass end of the ΛCDM
 													predicted stellar mass-halo mass relation (M∗–Mhalo).
 												</p>
